  version 2.10
- split up the code into separate files for each functionality
- added slash command for automatically caging pets that are owned 3 times

  version 2.9.1
- fixed a bug in restoring nameplates while in combat

  version 2.9
- fixed a (dumb) bug making the addon unusable when freshly installing it
- updated inventory scanning to per-bag updates to greatly improve performance
- fixed font spacing
- added font shadow

  version 2.8.6
- improved performance

  version 2.8.5
- updated game version

  version 2.8.4
- added russian localization for outline options

  version 2.8.3
- added option to select text outline
- fixed nameplate restoring while in combat
- fixed artifact weapon handling to not accidentally prevent messages

  version 2.8.2
- fixed minor issue with item links of equipped items
- removed redundant code and cleaned up code

  version 2.8.1
- fixed wrong item count when getting an item while a similar item is already equipped

  version 2.8
- fixed error when caging pets
- completely reworked item detection to not be dependent on the games event order

  version 2.7.9
- improved message pattern matching to match exact messages
- improved currency display
- fixed mailbox detection after accepting queues while mailbox is open
- fixed fishing detection

  version 2.7.8
- fixed bug with item count when looting more than one of an item

  version 2.7.7
- fixed money displaying all money once after logging in
- fixed loot window being hidden if not all could be looted

  version 2.7.6
- fixed name being displayed for stackable items when only looting one

  version 2.7.5
- fixed bug with faulty item level on scaling items

  version 2.7.4
- fixed currency display

  version 2.7.3
- fixed display of similar items as multiple
- updated russian localization

  version 2.7.2
- fixed display of stackable items when no count shall be displayed
- display now uses default client font

  version 2.7.1
- fixed cyrillic letters not being displayed