@@ -1,6 +1,7 @@
   version 2.10
-- split up the code into separate files for each functionality
 - added slash command for automatically caging pets that are owned 3 times
+- added reputation tracking
+- split up the code into separate files for each functionality to make maintaining and expanding easier
 
   version 2.9.1
 - fixed a bug in restoring nameplates while in combat
